o continue work on keyboard handling
git-svn-id: https://j-wings.svn.sourceforge.net/svnroot/j-wings/wings2/trunk@3396 c8af5dc8-8010-0410-93ac-e0f74e17e1d8